[tool.poetry]
name = "dbt-action"
version = "0.1.0"
description = ""
authors = ["tommybebe <hansupanda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.0.3"
dbt-bigquery = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
